changed the filtered button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <label for="input-search">
           <i class="fa-solid fa-circle"></i>
         </label>
-        <input type="text" class="search__input-search" id="input-search" placeholder="create a new todo...">
+        <input autocomplete="off" type="text" class="search__input-search" id="input-search" placeholder="create a new todo...">
       </form>
     </section>
     <!--x search section x-->
